RESOLVED FIXED242424
Lots of missing tiles when scrolling large source files in github
https://bugs.webkit.org/show_bug.cgi?id=242424
Summary Lots of missing tiles when scrolling large source files in github
Simon Fraser (smfr)
Reported 2022-07-06 21:57:50 PDT
Scrolling https://github.com/WebKit/WebKit/blame/main/Source/WebCore/dom/Element.cpp in Safari show lots of missing tiles because of slow painting. <rdar://91790051>
Attachments
Simon Fraser (smfr)
Comment 1 2022-07-06 22:05:05 PDT
EWS
Comment 2 2022-07-07 10:18:29 PDT
Committed 252221@main (ba91bd60a084): <https://commits.webkit.org/252221@main> Reviewed commits have been landed. Closing PR #2153 and removing active labels.
Simon Fraser (smfr)
Comment 3 2022-07-25 17:49:26 PDT
*** Bug 243164 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 4 2022-08-31 20:17:18 PDT
*** Bug 239366 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 5 2022-08-31 22:12:06 PDT
FWIW, I'm still seeing a lot of white when scrolling this page on macOS Ventura, on 16" MacBook Pro M1 Max.
Note You need to log in before you can comment on or make changes to this bug.