Lots of missing tiles when scrolling large source files in github https://bugs.webkit.org/show_bug.cgi?id=242424 <rdar://91790051>

Reviewed by Darin Adler.

Pages like https://github.com/WebKit/WebKit/blame/main/Source/WebCore/dom/Element.cpp, which trigger
sideways scrolling because of long lines, end up with a nested overflow:scroll, with many tiles.
This triggered a slow painting behavior because of the check for
`paintBehavior.contains(PaintBehavior::CompositedOverflowScrollContent)` in RenderBlock::paint(),
which bypasses an optimization to skip renderers whose visual overflow rect is entirely outside the
paint rect.

We only need to consult the PaintBehavior::CompositedOverflowScrollContent bit for the RenderBlock
that is the composited scroller, because that's the renderer that has content that we need to paint
into the scrolled contents compositing layer that exists outside the visual overflow rect. This
change restores the optimization for deeper descendants of composited scrollers.

* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paint):

Canonical link: https://commits.webkit.org/252221@main